source/formulaforce/main/objects/Contestant__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>deprecated - DO NOT USE</description>
    <label>Car (deprecated)</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Contestants</relationshipLabel>
    <relationshipName>Contestants</relationshipName>
    <type>Lookup</type>
</CustomField>