source/formulaforce/main/objects/Contestant__c/fields/DNF__c.field-meta.xml
<CustomField>
    <fullName>DNF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>deprecated - DO NOT USE</description>
    <label>DNF (deprecated)</label>
    <type>Checkbox</type>
</CustomField>