source/formulaforce/main/objects/Contestant__c/fields/Driver_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Number__c</fullName>
    <label>Driver Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>