source/formulaforce/main/objects/Contestant__c/fields/DriverRace__c.field-meta.xml
<CustomField>
    <fullName>DriverRace__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <formula>Driver__r.Name + &apos; (&apos; + Race__r.Name + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver and Race (deprecated)</label>
    <type>Text</type>
</CustomField>