source/formulaforce/main/objects/Contestant__c/fields/Fastest_Lap__c.field-meta.xml
<CustomField>
    <fullName>Fastest_Lap__c</fullName>
    <label>Fastest Lap</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>