source/formulaforce/main/objects/Contestant__c/fields/Fastest_Lap_Speed__c.field-meta.xml
<CustomField>
    <fullName>Fastest_Lap_Speed__c</fullName>
    <label>Fastest Lap Speed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>