source/formulaforce/main/objects/Contestant__c/fields/Fastest_Lap_Time__c.field-meta.xml
<CustomField>
    <fullName>Fastest_Lap_Time__c</fullName>
    <label>Fastest Lap Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>