source/formulaforce/main/objects/Contestant__c/fields/Finishing_Status__c.field-meta.xml
<CustomField>
    <fullName>Finishing_Status__c</fullName>
    <label>Finishing Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>