source/formulaforce/main/objects/Contestant__c/fields/GridPosition__c.field-meta.xml
<CustomField>
    <fullName>GridPosition__c</fullName>
    <label>Grid Position</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>