source/formulaforce/main/objects/Contestant__c/fields/Laps_Completed__c.field-meta.xml
<CustomField>
    <fullName>Laps_Completed__c</fullName>
    <label>Laps Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>