source/formulaforce/main/objects/Contestant__c/fields/Qualification1LapTime__c.field-meta.xml
<CustomField>
    <fullName>Qualification1LapTime__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <label>Qualification 1 Lap Time (deprecated)</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>