source/formulaforce/main/objects/Contestant__c/fields/Race_Position_Order__c.field-meta.xml
<CustomField>
    <fullName>Race_Position_Order__c</fullName>
    <label>Race Position Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>