source/formulaforce/main/objects/Contestant__c/fields/Race_Position_Text__c.field-meta.xml
<CustomField>
    <fullName>Race_Position_Text__c</fullName>
    <label>Race Position (Text)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>