source/formulaforce/main/objects/Contestant__c/fields/Race_Round__c.field-meta.xml
<CustomField>
    <fullName>Race_Round__c</fullName>
    <label>Race Round</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>