source/formulaforce/main/objects/Contestant__c/fields/Race_Season__c.field-meta.xml
<CustomField>
    <fullName>Race_Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Race Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Contestants</relationshipLabel>
    <relationshipName>Contestants</relationshipName>
    <type>Lookup</type>
</CustomField>