source/formulaforce/main/objects/Contestant__c/fields/RaceTime__c.field-meta.xml
<CustomField>
    <fullName>RaceTime__c</fullName>
    <label>Race Time (ms)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>