source/formulaforce/main/objects/Contestant__c/fields/RetirementReason__c.field-meta.xml
<CustomField>
    <fullName>RetirementReason__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <label>Retirement Reason (deprecated)</label>
    <type>TextArea</type>
</CustomField>