source/formulaforce/main/objects/Contestant__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <formula>Race__r.Season__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Season (deprecated)</label>
    <type>Text</type>
</CustomField>