source/formulaforce/main/objects/Contestant__c/fields/Win__c.field-meta.xml
<CustomField>
    <fullName>Win__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <formula>IF(RacePosition__c == 1, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win (deprecated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>